--- a/tools/c7n_huaweicloud/pyproject.toml
+++ b/tools/c7n_huaweicloud/pyproject.toml
@@ -48,6 +48,7 @@ huaweicloudsdksfsturbo = "^3.1.138"
 huaweicloudsdkorganizations ="^3.1.138"
 huaweicloudsdkram = "^3.1.138"
 huaweicloudsdkantiddos = "^3.1.138"
+huaweicloudsdkdns = "^3.1.138"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "<8.0"
